--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -52,3 +52,11 @@ h1{
     display:block;
     margin:0 auto;
 }
+.poweredby{
+    font-size: .8em!important;
+    text-align:center;
+    position:absolute;
+    bottom:5px;
+        bottom: 5px;
+    width: 100%;
+}
