Update push and small changes for v 1.0.0

--- a/src/views/main.html
+++ b/src/views/main.html
@@ -28,8 +28,9 @@
 								<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
 									<li><a ng-click="editMode = true;">Edit Title</a></li>
 									<li><a ng-click="copy()">Copy Address</a></li>
+									<li><a ng-click="qr()">View QR</a></li>
 									<li><a ng-click="delegate()">Manage Delegate</a></li>
-									<li><a ng-click="export()">Export</a></li>
+									<li><a ng-click="remove()">Remove Account</a></li>
 								</ul>
 							</div>
 						</h1>
