--- a/src/views/create.html
+++ b/src/views/create.html
@@ -1,11 +1,11 @@
 <div class="text-center">
-    <h1>New TezBox</h1>
+    <h1>{{ title || 'New Tezbox' }}</h1>
 
 
     <div class="row">
     
         <div class="col-xs-12">
-            <p class="alert alert-danger"><strong>Please write your seed words below and store them in a secure place. These can be used to restore your wallet.</strong></p>
+            <p class="alert alert-danger"><strong>{{ text || 'Please write your seed words below and store them in a secure place. These can be used to restore your wallet.' }}</strong></p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
             <p class="mnemonic">{{mnemonic}}</p>
