--- a/src/views/create.html
+++ b/src/views/create.html
@@ -1,11 +1,14 @@
-<div class="text-center">
-    <h1>New TezBox</h1>
+<div>
+    <div class="row mainHeaderBox">
+        <div class="col-xs-6">
+            <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> TEZBOX</span>
+        </div>
+    </div>
 
 
-    <div class="row">
-    
+    <div class="row text-center">
         <div class="col-xs-12">
-            <p class="alert alert-danger"><strong>Please write your seed words below and store them in a secure place. These can be used to restore your wallet.</strong></p>
+            <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please write your seed words below and store them in a secure place. These can be used to restore your wallet.</strong></p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
             <p class="mnemonic">{{mnemonic}}</p>
@@ -17,8 +20,9 @@
             </div>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-            <a ng-click="cancel()" class="btn btn-danger">Cancel</a>
-            <a ng-click="create()" class="btn btn-primary">Create TezBox</a>
+            <a ng-click="create()" class="btn btn-success btn-block">Create TezBox</a>
+            <br />
+          <a ng-click="cancel()" class="btn-link">Cancel</a>
         </div>
     </div>
 </div>
