--- a/src/views/delegate.html
+++ b/src/views/delegate.html
@@ -1,6 +1,15 @@
-<div class="text-center">
-    <h1>Set Delegation</h1>
-    <div class="row">
+<div>
+    <div class="row mainHeaderBox">
+        <div class="col-xs-6">
+            <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> TEZBOX</span>
+        </div>
+    </div>
+
+
+    <div class="row text-center">
+        <div class="col-xs-12">
+            <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please ensure the delegate you are entering has been registered to participate in the baking protocol.</strong></p>
+        </div>
         <div ng-show="sending" class="text-align:center;">
         
           <strong>Saving, please wait</strong>
@@ -21,8 +30,9 @@
             </div>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <a ng-click="cancel()" class="btn btn-danger">Cancel</a>
-          <a ng-click="save()" class="btn btn-primary">Save</a>
+          <a ng-click="save()" class="btn btn-success btn-block">Update Delegate</a>
+          <br />
+          <a ng-click="cancel()" class="btn-link">Back to Wallet</a>
         </div>
         </div>
     </div>
