--- a/src/views/restore.html
+++ b/src/views/restore.html
@@ -1,7 +1,15 @@
-<div class="text-center">
-    <h1>Restore TezBox</h1>
-    
-    <div class="row">
+<div>
+    <div class="row mainHeaderBox">
+        <div class="col-xs-6">
+            <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> TEZBOX</span>
+        </div>
+    </div>
+
+
+    <div class="row text-center">
+      <div class="col-xs-12">
+            <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please enter your seed phrase below, as well as a password to secure your data and we will atempt to restore your wallet.</strong></p>
+        </div>
         <div class="col-xs-10 col-xs-offset-1">
             <div class="form-group">
                 <textarea rows=3 class="text-center form-control" placeholder="Enter Seed Words"></textarea>
@@ -14,8 +22,9 @@
             </div>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-            <a ng-click="cancel()" class="btn btn-danger">Cancel</a>
-            <a ng-click="restore()" class="btn btn-primary">Restore TezBox</a>
+            <a ng-click="restore()" class="btn btn-success btn-block">Restore TezBox</a>
+            <br />
+            <a ng-click="cancel()" class="btn-link">Cancel</a>
         </div>
     </div>
 </div>
