--- a/src/views/send2.html
+++ b/src/views/send2.html
@@ -1,6 +1,15 @@
-<div class="text-center">
-    <h1>Please confirm</h1>
-    <div class="row">
+<div>
+    <div class="row mainHeaderBox">
+        <div class="col-xs-6">
+            <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> TEZBOX</span>
+        </div>
+    </div>
+
+
+    <div class="row text-center">
+        <div class="col-xs-12">
+            <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>You are about to approve the following automatic transaction - please verify before sending.</strong></p>
+        </div>
         <div ng-show="sending" class="text-align:center;">
         
           <strong>Sending, please wait</strong>
@@ -9,22 +18,33 @@
           <div class="col-xs-10 col-xs-offset-1">
               <div class="form-group">
                 <label for="exampleInputEmail1">To address</label>
-                <input disabled type="text" class="text-center form-control" ng-model="toaddress" >
+                <input type="text" class="text-center form-control" ng-model="toaddress" >
               </div>
               
+          </div>
+          <div class="col-xs-5 col-xs-offset-1">
               <div class="form-group">
-                <label for="exampleInputEmail1">Amount to Send</label>
-                <input disabled type="text" class="text-center form-control" ng-model="amount" >
+                <label for="exampleInputEmail1">Amount</label>
+                <input type="text" class="text-center form-control" ng-model="amount" >
               </div>
-              
+          </div>
+          <div class="col-xs-5">
               <div class="form-group">
-                <label for="exampleInputEmail1">Parameters (optional)</label>
-                <input disabled type="text" class="text-center form-control" ng-model="parameters" >
+                <label for="exampleInputEmail1">Fee</label>
+                <input type="text" class="text-center form-control" ng-model="fee" >
+              </div>
+          </div>
+              
+          <div class="col-xs-10 col-xs-offset-1">
+              <div class="form-group">
+                <label for="exampleInputEmail1">Parameters</label>
+                <input type="text" class="text-center form-control" placeholder="(optional)"ng-model="parameters" >
               </div>
           </div>
           <div class="col-xs-10 col-xs-offset-1">
-            <a ng-click="cancel()" class="btn btn-danger">Cancel</a>
-            <a ng-click="send()" class="btn btn-primary">Send</a>
+            <a ng-click="send()" class="btn btn-success btn-block">Send</a>
+            <br />
+            <a ng-click="cancel()" class="btn-link">Cancel</a>
           </div>
         </div>
     </div>
