--- a/src/views/unlock.html
+++ b/src/views/unlock.html
@@ -1,6 +1,14 @@
-<div class="text-center">
-    <h1>Welcome back</h1>
-    <img class="logoBig" src="images/icon.png" />
+<div class="text-center" style="padding-top:30px;">
+    
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-1">
+        <img class="logoBig" src="images/logo.jpg" />
+        <h2 class="header">TezBox</h2>
+        <h3 class="header">Welcome Back!</h3>
+        <br />
+        <br />
+      </div>
+    </div>
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1">
           <div class="form-group">
@@ -9,8 +17,9 @@
             </div>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
-          <a ng-click="unlock()" class="btn btn-primary">Unlock</a>
-          <a ng-click="clear()" class="btn btn-danger">Clear TezBox</a>
+          <a ng-click="unlock()" class="btn btn-success btn-block">Unlock Wallet</a>
+          <br />
+          <a ng-click="clear()" class="btn-link">Clear TezBox</a>
         </div>
     </div>
 </div>
