--- a/src/views/create.html
+++ b/src/views/create.html
@@ -1,7 +1,7 @@
 <div>
     <div class="row mainHeaderBox">
         <div class="col-xs-6">
-            <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> {{ title || 'TEZBOX' }}/span>
+            <span class="logo"><img class="logoSmall" src="images/logo.jpg" />{{ title || 'TEZBOX' }}</span>
         </div>
     </div>
 
