--- a/src/views/new.html
+++ b/src/views/new.html
@@ -11,9 +11,7 @@
     </div>
     <div class="row">
         <div class="col-xs-10 col-xs-offset-1">
-          <a ng-click="create()" class="btn btn-success btn-block">Create TezBox</a>
-          <br />
-          <a ng-click="restore()" class="btn btn-primary btn-block">Restore TezBox</a>
+          <p>Requesting funds from the faucet...</p>
         </div>
     </div>
 </div>
