--- a/src/views/main.html
+++ b/src/views/main.html
@@ -3,11 +3,11 @@
         <div class="col-xs-6">
             <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> TEZBOX</span>
         </div>
-        <div class="col-xs-6 text-right">
+<!--         <div class="col-xs-6 text-right">
             <a ng-click="lock()" class="btn btn-icon btn-default"><i class="fa fa-lock" aria-hidden="true"></i></a>
-        </div>
+        </div> -->
     </div>
-    <div class="row addressDetails">
+<!--     <div class="row addressDetails">
         <div class="col-xs-12">
             <h1 class="walletTitle" ng-show="!editMode">
               <div class="dropdown left">
@@ -39,7 +39,7 @@
               </span>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="row addressDetails text-center" style="margin-top:10px;">
         <div class="col-xs-3">
           <svg width="70" height="70" data-jdenticon-value="{{account.pkh}}"></svg>
