--- a/src/views/send2.html
+++ b/src/views/send2.html
@@ -42,7 +42,7 @@
               </div>
           </div>
           <div class="col-xs-10 col-xs-offset-1">
-            <a ng-click="send()" class="btn btn-success btn-block">Send</a>
+            <a ng-disabled=disableSend ng-click="send()" class="btn btn-success btn-block">{{ (labelSend ? 'Waiting for next block...' : 'Send') }}</a>
             <br />
             <a ng-click="cancel()" class="btn btn-block">Cancel</a>
           </div>
