--- a/src/views/main.html
+++ b/src/views/main.html
@@ -20,7 +20,7 @@
 									<li><a ng-click="add()">Add Account</a></li>
 								</ul>
 							</div>
-              {{account.title}}
+              {{accounts[account].title}}
 							<div class="dropdown right">
 								<button class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 									<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
@@ -30,12 +30,12 @@
 									<li><a ng-click="copy()">Copy Address</a></li>
 									<li><a ng-click="qr()">View QR</a></li>
 									<li><a ng-click="delegate()">Manage Delegate</a></li>
-									<li><a ng-click="remove()">Remove Account</a></li>
+									<li ng-show="account > 0"><a ng-click="remove()">Remove Account</a></li>
 								</ul>
 							</div>
 						</h1>
             <div ng-show="editMode" style="    margin-top: 17px;" class="input-group">
-              <input type="text" class="form-control" ng-model="account.title">
+              <input type="text" class="form-control" ng-model="accounts[account].title">
               <span class="input-group-btn">
                 <a ng-click="save()" class="btn btn-success">Save</a>
               </span>
@@ -47,7 +47,7 @@
           <svg width="70" height="70" data-jdenticon-value="{{account.pkh}}"></svg>
         </div>
         <div class="col-xs-9">
-            <h5 class="address">{{account.pkh}}</h5>
+            <h5 class="address"><span>{{accounts[account].address}}</span><a target="_blank" href='http://zeronet.tzscan.io/{{accounts[account].address}}'>View on TZScan</a></h5>
             <h5>{{accountDetails.balance}} <button ng-click="refresh()" class="icon-button" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 									<i class="fa fa-refresh" aria-hidden="true"></i>
 								</button>
