--- a/src/views/qr.html
+++ b/src/views/qr.html
@@ -2,8 +2,8 @@
     <h1>View QR</h1>
     <div class="row">
           <div class="col-xs-10 col-xs-offset-1">
-            <p>{{account.pkh}}</p>
-            <img style="min-height:200px; margin:20px;" src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data={{account.pkh}}" /<br />
+            <p>{{account.address}}</p>
+            <img style="min-height:200px; margin:20px;" src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data={{account.address}}" /<br />
           </div>
           </div>
     <div class="row">
