--- a/src/views/qr.html
+++ b/src/views/qr.html
@@ -1,14 +1,20 @@
-<div class="text-center">
-    <h1>View QR</h1>
-    <div class="row">
+<div>
+    <div class="row mainHeaderBox">
+        <div class="col-xs-6">
+            <span class="logo"><img class="logoSmall" src="images/logo.jpg" /> TEZBOX</span>
+        </div>
+    </div>
+
+
+    <div class="row text-center">
           <div class="col-xs-10 col-xs-offset-1">
-            <p>{{account.address}}</p>
-            <img style="min-height:200px; margin:20px;" src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data={{account.address}}" /<br />
+            <img style="min-height:200px; margin:20px;" src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data={{account.pkh}}" /<br />
+            <p class="address">{{account.pkh}}</p>
           </div>
-          </div>
-    <div class="row">
           <div class="col-xs-10 col-xs-offset-1">
-            <a ng-click="cancel()" class="btn btn-danger">Back</a>
-          </div>
+            <a ng-click="copy()" class="btn btn-success btn-block">Copy Address</a>
+            <br />
+          <a ng-click="cancel()" class="btn-link">Back to Wallet</a>
+        </div>
     </div>
 </div>
