--- a/src/views/delegate.html
+++ b/src/views/delegate.html
@@ -7,33 +7,37 @@
 
 
     <div class="row text-center">
-        <div class="col-xs-12">
-            <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please ensure the delegate you are entering has been registered to participate in the baking protocol.</strong></p>
+        <div ng-show="!delegatable" class="col-xs-12">
+            <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Delegating from this address is not allowed (lowercas tz addresses). Please create an account (KT address) to use for delegation.</strong></p>
         </div>
-        <div ng-show="sending" class="text-align:center;">
-        
+        <div ng-show="delegatable" class="col-xs-12">
+          <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please ensure the delegate you are entering has been registered to participate in the baking protocol.</strong></p>
+        </div>
+        <div ng-show="delegatable && sending" class="text-align:center;">
           <strong>Saving, please wait</strong>
         </div>
-        <div ng-hide="sending">
+        <div ng-show="sendError" class="col-xs-12">
+          <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>{{sendError}}</strong></p>
+        </div>
+        <div ng-hide="sending || !delegatable">
         <div class="col-xs-10 col-xs-offset-1">
             <div class="form-group">
               <label for="exampleInputEmail1">Delegate</label>
               <select class="text-center form-control" ng-model="delegateType">
                 <option value="">Custom</option>
-                <option value="tz1TwYbKYYJxw7AyubY4A9BUm2BMCPq7moaC">Tezzigator</option>
-                <option value="tz1UsgSSdRwwhYrqq7iVp2jMbYvNsGbWTozp">MyCryptoDelegate</option>
+                <option  ng-repeat="b in bakers track by b.address" value="{{b.address}}">{{b.name}}</option>
               </select>
             </div>
             <div class="form-group" ng-show="!delegateType">
               <label for="exampleInputEmail1">Address</label>
-              <input type="text" class="text-center form-control" ng-model="delegate" >
+              <input type="text" class="text-center form-control" ng-model="delegate">
             </div>
         </div>
-        <div class="col-xs-10 col-xs-offset-1">
-          <a ng-click="save()" class="btn btn-success btn-block">Update Delegate</a>
+        </div>
+        <div ng-hide="sending" class="col-xs-10 col-xs-offset-1">
+          <a ng-show="delegatable" ng-click="save()" class="btn btn-success btn-block">Update Delegate</a>
           <br />
           <a ng-click="cancel()" class="btn-link">Back to Wallet</a>
-        </div>
         </div>
     </div>
 </div>
