--- a/src/views/new.html
+++ b/src/views/new.html
@@ -1,4 +1,4 @@
-<div class="text-center" style="padding-top:30px;">
+<div class="text-center">
     
     <div class="row">
       <div class="col-xs-10 col-xs-offset-1">
