--- a/src/views/send.html
+++ b/src/views/send.html
@@ -11,6 +11,9 @@
         
           <strong>Sending, please wait</strong>
         </div>
+        <div ng-show="sendError" class="col-xs-12">
+          <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>{{sendError}}</strong></p>
+        </div>
         <div ng-hide="sending">
           <div class="col-xs-10 col-xs-offset-1">
               <div class="form-group">
@@ -22,13 +25,13 @@
           <div class="col-xs-5 col-xs-offset-1">
               <div class="form-group">
                 <label for="exampleInputEmail1">Amount</label>
-                <input type="text" class="text-center form-control" ng-model="amount" >
+                <input type="number" class="text-center form-control" ng-model="amount" >
               </div>
           </div>
           <div class="col-xs-5">
               <div class="form-group">
                 <label for="exampleInputEmail1">Fee</label>
-                <input type="text" class="text-center form-control" ng-model="fee" >
+                <input type="number" class="text-center form-control" ng-model="fee" >
               </div>
           </div>
               
