--- a/src/app/views/encrypt.html
+++ b/src/app/views/encrypt.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row text-center">
       <div class="col-xs-12">
-            <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please enter a password to encrypt your private key. This password is only used to unlock your wallet (not required to restore).</strong></p>
+            <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please enter a password to encrypt your private key. This password is only used to unlock your wallet (not required to restore it).</strong></p>
         </div>
         <div class="col-xs-10 col-xs-offset-1">
             <div class="form-group">
