--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -31,6 +31,7 @@
 									<li><a ng-click="delegate()">Manage Delegate</a></li>
 									<li><a href="http://tzscan.io/{{accounts[account].address}}" target="_blank">View on TZScan</a></li>
 									<li ng-show="account > 0"><a ng-click="remove()">Remove Account</a></li>
+									<li ng-show="account === 0"><a ng-click="import()">Import KT1 Account</a></li>
 								</ul>
 							</div>
 						</h1>
