--- a/src/app/views/setting.html
+++ b/src/app/views/setting.html
@@ -7,7 +7,23 @@
     
       <div class="row text-center">
         <div class="col-xs-12">
-              <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please be careful with changing these settings.</strong></p>
+              <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please be careful with changing or interacting with these settings.</strong></p>
+          </div>
+      </div>
+      <div class="col-xs-12">
+          <div class="form-group">
+              <label class="text-center">Export Private Key</label>
+              <p>Please be careful with this option, as anyone viewing your screen will see the private key below</p>
+              <p ng-show="privateKey" style="padding:10px 0;font-size:10px;padding:5px;background-color: #f0f0f0;"><strong>{{privateKey}}</strong></p>
+            <div class="row">
+              <div class="col-xs-12">
+                <input type="password" placeholder="Enter your password to show" class="text-left form-control" ng-model="password">
+              </div>
+              <br /><br />
+              <div class="col-xs-6">
+                <a ng-click="show()" class="btn btn-success btn-small btn-block">Show</a>
+              </div>
+            </div>
           </div>
       </div>
       <div class="col-xs-12">
