--- a/src/app/views/delegate.html
+++ b/src/app/views/delegate.html
@@ -14,7 +14,7 @@
             <p class="alert alert-danger"><i class="leftIcon fas fa-exclamation-circle"></i><strong>Please ensure the delegate you are entering has been registered to participate in the baking protocol.</strong></p>
         </div>
         <div ng-show="account > 0 && delegateType != ''" class="col-xs-12">
-            <p class="alert alert-warning"><i class="leftIcon fas fa-exclamation-circle"></i><strong>TezBox doesn't endorse any of the listed delegation services listed below - please ensure you are doing your own research into each one.</strong></p>
+            <p class="alert alert-warning"><i class="leftIcon fas fa-exclamation-circle"></i><strong>TezBox doesn't endorse any of the delegation services listed below - please ensure you are doing your own research into each one.</strong></p>
         </div>
         <div ng-show="account > 0 && sending" class="text-align:center;">
           <strong>Saving, please wait</strong>
