--- a/src/app/views/import.html
+++ b/src/app/views/import.html
@@ -8,7 +8,7 @@
 
     <div class="row text-center">
         <div class="col-xs-12">
-            <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>You can use this to import KT1 addresses that have been originated else where (or after you have restored your account). You can view all of your originated KT1 addresses on <a target="_blank" href="http://tzscan.io/{{accounts[account].address}}?default=origination">tzscan.io</a></strong></p>
+            <p class="alert alert-info"><i class="leftIcon fas fa-exclamation-circle"></i><strong>You can use this to import KT1 addresses that have been originated elsewhere (or after you have restored your account). You can view all of your originated KT1 addresses on <a target="_blank" href="https://tzscan.io/{{accounts[account].address}}?default=origination">TzScan</a></strong></p>
         </div>
 
         <div class="col-xs-10 col-xs-offset-1">
